<resources>
    <string name="app_name">tugas3sharedpreference</string>
    <string name="app_names">tugas3</string>
    <string name="pendaftaran">Belum punya akun? Yuk Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="text2login">Saya Siap Menjadi Orang Tua Muda</string>
    <string name="ngasuh">NGASUH</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="daftar">Daftar</string>
</resources>
