<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sharedpreferences.Home">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="657dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/bgmenu"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="59dp"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_child_friendly" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/imageView5"
            android:gravity="left"
            android:text="@string/ngasuh"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/imageView5"
            android:layout_below="@id/textView"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/text2login" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="150dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="Hallo"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="120dp"
            android:layout_below="@id/textView7"
            android:gravity="center"
            android:text="Rizal Maulana"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_below="@id/txt_name"
            android:layout_gravity="center"
            android:layout_marginStart="134dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn"
            android:text="Logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_alignParentBottom="true"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>